word wrap issue

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -206,7 +206,8 @@ input[type="submit"] {
 }
 
 .form__input {
-  flex: 1;
+  word-wrap: break-word;
+  word-break: break-all;
 }
 
 .login {
@@ -379,10 +380,14 @@ button:disabled {
 }
 
 .message-background {
-  border-top-right-radius: 15px;
-  border-bottom-left-radius: 15px;
-  padding: 10px;
+  -webkit-box-decoration-break: clone;
+  -o-box-decoration-break: clone;
+  box-decoration-break: clone;
+  border-top-right-radius: 12px;
+  border-bottom-left-radius: 12px;
+  padding: 7px;
   background-color: #557ff6;
+  word-wrap: break-word;
 }
 
 .message__name {
